Fix overflow bug #1654

--- a/src/home-page/_home-page.scss
+++ b/src/home-page/_home-page.scss
@@ -3,4 +3,5 @@
 .home-page {
   margin-bottom: baseline.increments(2);
   flex-grow: 1;
+  overflow-x: hidden;
 }
